[package]
name = "transaction_test"
version = "0.1.0"
edition = "2021"

[dependencies]
csv-async ={ version = "1.2", features = ["with_serde", "tokio"] }
rust_decimal = { version = "1.23", features = ["serde-str"] }
serde = { version = "1.0", features = ["derive"] }
bail-out = "0.2"
actix = "0.13"
tokio = { version = "1.17", features = ["io-util", "fs", "io-std"] }
tokio-stream = "0.1"
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"

[dev-dependencies]
rust_decimal_macros = "1.23"
